--- a/Script/regional_model/01_shapefiles_to_xyz_regional.Rmd
+++ b/Script/regional_model/01_shapefiles_to_xyz_regional.Rmd
@@ -4,6 +4,7 @@ editor_options:
   chunk_output_type: console
 ---
 
+# NOTE THIS FILE CAN BE REMOVED - Denisse has created the mask for regional models and transformed in csv file - see 02 
 # Libraries
 
 ```{r}
